--- a/TestWPPL/App.xaml
+++ b/TestWPPL/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TestWPPL"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Login/LoginPage.xaml">
     <Application.Resources>
          
     </Application.Resources>
