--- a/TestWPPL/MainWindow.xaml
+++ b/TestWPPL/MainWindow.xaml
@@ -7,11 +7,19 @@
         xmlns:basic1="clr-namespace:Velacro.UIElements.Basic;assembly=Velacro"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="1000">
     <Grid>
-        <Frame Name="mainFrame" NavigationUIVisibility="Hidden" Margin="78,0,0,0"/>
-        <Button Name="loginButton_btn" Content="Login" HorizontalAlignment="Left" Margin="3,10,0,0" VerticalAlignment="Top" Width="75" Click="loginButton_btn_Click"/>
-        <Button Name="registerButton_btn" Content="Register" HorizontalAlignment="Left" Margin="3,35,0,0" VerticalAlignment="Top" Width="75" Click="registerButton_btn_Click"/>
-        <Button x:Name="dashboardButton_btn" Content="Dashboard" HorizontalAlignment="Left" Margin="3,60,0,0" VerticalAlignment="Top" Width="75" Click="dashboardButton_btn_Click"/>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#FF3C97C3" Offset="0"/>
+                <GradientStop Color="White" Offset="0.457"/>
+                <GradientStop Color="#FF27B39C" Offset="0.022"/>
+                <GradientStop Color="#FFB4FBFB" Offset="0.152"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Frame Name="mainFrame" NavigationUIVisibility="Hidden" Background="#FFF5FAFD"/>
+        <Button Name="loginButton_btn" Visibility="Hidden" Content="Login" HorizontalAlignment="Left" Margin="809,12,0,0" VerticalAlignment="Top" Width="75" Click="loginButton_btn_Click" Height="28"/>
+        <Button Name="registerButton_btn" Visibility="Hidden" Content="Register" HorizontalAlignment="Left" Margin="907,10,0,0" VerticalAlignment="Top" Width="75" Click="registerButton_btn_Click" Height="33"/>
+        <Button x:Name="dashboardButton_btn" Visibility="Hidden"  Content="Dashboard" HorizontalAlignment="Left" Margin="3,60,0,0" VerticalAlignment="Top" Width="75" Click="dashboardButton_btn_Click"/>
     </Grid>
 </basic1:MyWindow>
