new Velacro.dll

--- a/TestWPPL/Login/LoginPage.xaml
+++ b/TestWPPL/Login/LoginPage.xaml
@@ -1,10 +1,11 @@
-﻿<basic1:MyPage x:Class="TestWPPL.Login.LoginPage"
+﻿<basic1:MyPage
+    xmlns:basic1="clr-namespace:Velacro.UIElements.Basic;assembly=Velacro"
+    x:Class="TestWPPL.Login.LoginPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TestWPPL"
-      xmlns:basic1="clr-namespace:Velacro.UIElements.Basic;assembly=Velacro"
+      xmlns:local="clr-namespace:TestWPPL.Login"
       xmlns:lineChart="clr-namespace:Velacro.Chart.LineChart;assembly=Velacro"
       mc:Ignorable="d" 
       d:DesignHeight="480" d:DesignWidth="1000"
