--- a/TestWPPL/Login/LoginPage.xaml
+++ b/TestWPPL/Login/LoginPage.xaml
@@ -1,5 +1,5 @@
-﻿<basic1:MyPage
-    xmlns:basic1="clr-namespace:Velacro.UIElements.Basic;assembly=Velacro"
+﻿<basic:MyWindow
+    xmlns:basic="clr-namespace:Velacro.UIElements.Basic;assembly=Velacro"
     x:Class="TestWPPL.Login.LoginPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -28,4 +28,4 @@
         <PasswordBox PreviewTextInput="password_box_PreviewTextInput" Name="password_box" PasswordChar="*"  Grid.Column="0"  Grid.Row ="0" VerticalAlignment="Center" Height="24" Margin="734,239,26,190" Password="asasas"/>
         <TextBlock Name="password_error_txt" Text="" TextAlignment="Center" Grid.Column="0" Margin="734,0,26,160" Height="22" Foreground="Red" VerticalAlignment="Bottom"/>
     </Grid>
-</basic1:MyPage>
+</basic:MyWindow>
