--- a/TestWPPL/Login/LoginPage.xaml
+++ b/TestWPPL/Login/LoginPage.xaml
@@ -27,5 +27,10 @@
         <TextBlock Name="email_error_txt" Text="" TextAlignment="Center" Grid.Column="0" Margin="734,0,26,220" Height="22" Foreground="Red" VerticalAlignment="Bottom"/>
         <PasswordBox PreviewTextInput="password_box_PreviewTextInput" Name="password_box" PasswordChar="*"  Grid.Column="0"  Grid.Row ="0" VerticalAlignment="Center" Height="24" Margin="734,239,26,190" Password="asasas"/>
         <TextBlock Name="password_error_txt" Text="" TextAlignment="Center" Grid.Column="0" Margin="734,0,26,160" Height="22" Foreground="Red" VerticalAlignment="Bottom"/>
+        <Canvas HorizontalAlignment="Left" Height="62" Margin="785,67,0,0" VerticalAlignment="Top" Width="130">
+            <Canvas.Background>
+                <ImageBrush ImageSource="ANTRIANsehat.png"/>
+            </Canvas.Background>
+        </Canvas>
     </Grid>
 </basic:MyWindow>
