--- a/TestWPPL/SuperAdminWindow.xaml
+++ b/TestWPPL/SuperAdminWindow.xaml
@@ -1,12 +1,12 @@
 ﻿<basic:MyWindow  xmlns:basic="clr-namespace:Velacro.UIElements.Basic;assembly=Velacro"
-                 x:Class="TestWPPL.SuperAdmin"
+                 x:Class="TestWPPL.SuperAdminWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TestWPPL"
         mc:Ignorable="d"
-        Title="SuperAdmin" Height="640" Width="1120">
+        Title="SuperAdminWindow" Height="640" Width="1120">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="240"/>
@@ -15,17 +15,16 @@
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                 <GradientStop Color="#FF31BF9F" Offset="0.004"/>
-                <GradientStop Color="#FFE4FDF7" Offset="0.451"/>
+                <GradientStop Color="#FFF4FFFC" Offset="0.451"/>
                 <GradientStop Color="#FF6DD3CE" Offset="0.089"/>
-                <GradientStop Color="#FFB4FBFB" Offset="0.238"/>
-                <GradientStop Color="#FFD6F7F0" Offset="0.664"/>
-                <GradientStop Color="#FFBDFFE1" Offset="0.902"/>
+                <GradientStop Color="#FFD5FFFF" Offset="0.238"/>
+                <GradientStop Color="#FFF2FDF8" Offset="0.902"/>
             </LinearGradientBrush>
         </Grid.Background>
         <Frame Name="mainFrame" NavigationUIVisibility="Hidden" Background="#FFF5FAFD" Margin="120,86,0,0" Grid.RowSpan="2"/>
-        <Button Name="user_btn" Content="List User" HorizontalAlignment="Left" FontSize="12" HorizontalContentAlignment="Center"  Margin="10,172,0,0" VerticalAlignment="Center" Width="99" Height="38" FontFamily="Poppins" FontWeight="Normal"/>
-        <Button Name="health_agency_btn" Content="List Health&#xD;&#xA;Agency" FontSize="11" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,34,0,0" VerticalAlignment="Center" Width="99" Height="41" FontFamily="Poppins" FontWeight="Normal"/>
-        <Button Name="logout_btn" Content="Logout" HorizontalAlignment="Right" Margin="995,28,10,0" VerticalAlignment="Top" Height="30"/>
+        <Button Name="user_btn" Content="List User" HorizontalAlignment="Left" FontSize="12" HorizontalContentAlignment="Center"  Margin="10,172,0,0" VerticalAlignment="Center" Width="99" Height="38" FontFamily="Poppins" FontWeight="Normal"  Click="listUserBtnClick"/>
+        <Button Name="health_agency_btn" Content="List Health&#xD;&#xA;Agency" FontSize="11" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,34,0,0" VerticalAlignment="Center" Width="99" Height="41" FontFamily="Poppins" FontWeight="Normal"  Click="listHealthAgencyBtnClick"/>
+        <Button Name="logout_btn" Content="Logout" HorizontalAlignment="Right" Margin="995,28,10,0" VerticalAlignment="Top" Height="30"  Click="logoutBtnClick"/>
         <Canvas HorizontalAlignment="Left" Height="66" VerticalAlignment="Top" Width="122" Margin="8,14,0,0">
             <Canvas.Background>
                 <ImageBrush ImageSource="navbar logo.png"/>
