--- a/TestWPPL/App.xaml
+++ b/TestWPPL/App.xaml
@@ -6,7 +6,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <materialDesign:CustomColorTheme BaseTheme="Light" PrimaryColor="#FFF5FAFD" SecondaryColor="#0cc7ab" />
+                <materialDesign:CustomColorTheme BaseTheme="Light" PrimaryColor="LightCyan" SecondaryColor="#0cc7ab" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
             </ResourceDictionary.MergedDictionaries>
