--- a/TestWPPL/SuperAdminWindow.xaml
+++ b/TestWPPL/SuperAdminWindow.xaml
@@ -25,8 +25,8 @@
         <Button Name="user_btn" Content="List User" HorizontalAlignment="Left" FontSize="12" HorizontalContentAlignment="Center"  Margin="10,172,0,0" VerticalAlignment="Center" Width="99" Height="38" FontFamily="Poppins" FontWeight="Normal"  Click="listUserBtnClick"/>
         <Button Name="health_agency_btn" Content="List Health&#xD;&#xA;Agency" FontSize="12" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,34,0,0" VerticalAlignment="Center" Width="99" Height="41" FontFamily="Poppins" FontWeight="Normal"  Click="listHealthAgencyBtnClick"/>
         <Button Name="logout_btn" Foreground="Red" Content="Logout" HorizontalAlignment="Right" Margin="995,28,10,0" VerticalAlignment="Top" Height="30"  Click="logoutBtnClick"/>
-        
-        <Button Name="add_ha_btn" Visibility="Hidden" FontSize="12" Height="35" Click="addHA_OnClick" Background="WhiteSmoke" Margin="995,0,30,20" VerticalAlignment="Center"  HorizontalAlignment="Right">
+
+        <Button Name="add_ha_btn" ToolTip="Add Health Agency" Visibility="Hidden" FontSize="12" Height="35" Click="addHA_OnClick" Background="WhiteSmoke" Margin="995,0,30,20" VerticalAlignment="Center"  HorizontalAlignment="Right">
             <Button.Content>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="{materialDesign:PackIcon Hospital}"/>
@@ -34,7 +34,7 @@
                 </StackPanel>
             </Button.Content>
         </Button>
-        <Button Name="add_user_btn" Visibility="Hidden" FontSize="13" Height="35" Click="addUser_OnClick" Background="WhiteSmoke" Margin="995,0,30,20" VerticalAlignment="Center" HorizontalAlignment="Right">
+        <Button Name="add_user_btn" ToolTip="Add User" Visibility="Hidden" FontSize="13" Height="35" Click="addUser_OnClick" Background="WhiteSmoke" Margin="995,0,30,20" VerticalAlignment="Center" HorizontalAlignment="Right">
             <Button.Content>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="{materialDesign:PackIcon Plus}"/>
